feature: add ffmpeg compressing

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "upload": "node deploy.js"
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
