--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@ffmpeg/util": "^0.12.2",
+    "events": "^3.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
